Java VM options explained in README